--- a/style.css
+++ b/style.css
@@ -21,13 +21,14 @@ nav h1{
     font-size: 40px;
     padding-right: 30px;
 }
-.hidden{
+nav ul{
     list-style-type: none;
     display: flex;
 }
 nav li{
     margin: 0px 10px;
     color: hsl(219, 9%, 45%);
+
 }
 nav img{
     width: 100%;
@@ -37,28 +38,89 @@ nav img{
     align-items: center;
 }
 .pic{
-    width: 40px;
+    width: 50px;
 }
 .icon{
     display: flex;
-    width: 100px;
+    width: 200px;
     justify-content: space-between;
     align-items: center;
+}
+.icon span {
+    background-color: red;
+    border-radius: 50%;
+    font-size: 10px;
+    color: white;
+    position: relative;
+    left: -10%;
+    padding: 3px 5px;
+}
+.list{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 20px;
+    row-gap: 20px;
+    margin-top: 50px;
+}
+.card{
+    position: fixed;
+    top: 0;
+    left:100% ;
+    width: 350px;
+    background-color: white;
+    height: 400px;
+    box-shadow: 1px 1px 5px rgb(141, 141, 141);
+    transition: 0.5s;
+}
+.card h1{
+    font-weight: 100;
+    margin: 0;
+    padding: 0 20px;
+    display: flex;
+    align-items: center;
+}
+.card .checkout{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+.card .checkout div{
+    background-color: pink;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    cursor: pointer;
+}
+.card .checkout div{
+    background-color: #22252c;
+    color: white;
+    width: 100%;
+}
+.active .card {
+    left: calc(100% - 500px);
+}
+.active .container{
+    transform: translateX(-200px);
 }
 section{
     display: flex;
     justify-content: space-between;
     margin-top: 50px;
-
 }
 .left{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-left: 50px;
+    padding-left: 30px;
+    justify-content: space-between;
+    width: 800px;
 }
 .big{
-    width: 500px;
+    width: 300px;
     margin-bottom: 20px;
 }
 .big img{
@@ -68,10 +130,10 @@ section{
 .lower{
     display: flex;
     justify-content: space-between;
-    width: 500px;
+    width: 300px;
 }
 .lower div {
-    width: 100px;
+    width: 70px;
 }
 .lower img{
     width: 100%;
@@ -144,7 +206,6 @@ button i{
     color: hsl(26, 100%, 55%);
     border-radius: 50%;
 }
-
 /* //MEDIA QUERRIES// */
 
 @media screen and (max-width:700px){
